--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="#"><img src="img\stunning-logo.png" alt="Stunning Landing Page Logo"></a>
+            <a href="#"><img src="stunning-logo.png" alt="Stunning Landing Page Logo"></a>
             <nav>
                 <ul>
                     <li><a class="active" href="#"></a></li>
@@ -38,31 +38,31 @@
                 </div>
                 <ul>
                     <li>
-                     <img src="img\tick-gray.png">
+                     <img src="tick-gray.png">
                      <span class="title">Dmm Design</span>
-                     <img src="img\user-red.png">
+                     <img src="user-red.png">
                      <span class="date">20 Dec</span>
                      <span class="tag lightred"></span>
                     </li>
                     <li class="active">
-                        <img src="img\tick-blue.png">
+                        <img src="tick-blue.png">
                         <span class="title">Blurr animation</span>
-                        <img src="img\user-orange.png">
+                        <img src="user-orange.png">
                         <span class="date">22 Dec</span>
                         <span class="tag red"></span>
 
                     </li>
                     <li>
-                        <img src="img\tick-gray.png">
+                        <img src="tick-gray.png">
                         <span class="title">Illustration</span>
-                        <img src="img\user-blue.png">
+                        <img src="user-blue.png">
                         <span class="date">24 Dec</span>
                         <span class="tag green"></span>
                     </li>
                     <li>
-                        <img src="img\tick-gray.png">
+                        <img src="tick-gray.png">
                         <span class="title">Refunds</span>
-                        <img src="img\user-blue.png">
+                        <img src="user-blue.png">
                         <span class="date">26 Dec</span>
                         <span class="tag lightorange"></span>
                     </li>
@@ -70,7 +70,7 @@
 
             </div>
             <div class="banner">
-                <img src="img\landing-section-image.png" alt="Landing Section Image">
+                <img src="landing-section-image.png" alt="Landing Section Image">
 
             </div>
 
